# agent_coding_usage

./: .env.example  .gitignore  README.md  pyproject.toml  release-notes-0.2.0-preview.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: ADAPTERS.md
docs/superpowers/plans/: 2026-03-29-import-config.md  2026-03-29-pypi-release.md  2026-03-29-remote-sshpass.md  2026-03-30-config-menu-editor.md  2026-03-30-release-workflows.md  2026-03-30-windows-cursor-managed-profile-login.md  2026-03-31-remote-output-budget-pagination.md  2026-03-31-remote-stdout-chunking.md  2026-03-31-terminal-host-table.md  2026-04-01-feishu-bitable-multi-target.md  2026-04-01-remote-python-version-discovery.md  2026-04-07-single-page-console-layout.md  2026-04-07-web-console-dashboard-redesign.md  2026-04-07-web-remote-input-state-machine.md  2026-04-08-feishu-doctor-write-probe.md  2026-04-08-runtime-preflight-robustness.md  2026-04-08-web-responsive-layout-and-modal-overflow.md  2026-04-08-web-run-dialog-remote-feishu.md  2026-04-08-web-sidebar-dashboard-polish.md
docs/superpowers/specs/: 2026-03-29-import-config-design.md  2026-03-29-pypi-release-design.md  2026-03-29-remote-sshpass-design.md  2026-03-31-remote-output-budget-pagination-design.md  2026-04-01-feishu-bitable-multi-target-design.md  2026-04-01-remote-python-version-discovery-design.md  2026-04-07-single-page-console-layout-design.md  2026-04-07-web-console-dashboard-redesign-design.md  2026-04-08-feishu-doctor-write-probe-design.md  2026-04-08-runtime-preflight-robustness-design.md  2026-04-08-web-responsive-layout-and-modal-overflow-design.md  2026-04-08-web-run-dialog-remote-feishu-design.md
node/: README.md  package-lock.json  package.json
node/bridge/: collector_bridge.py
node/resources/: bootstrap.env
node/scripts/: build-bundles.mjs
node/src/cli/: main.js
node/src/collectors/: cursor-dashboard.js  file-collector.js  local.js  opencode.js  parsing.js
node/src/core/: aggregation.js  hash.js  identity.js  models.js  privacy.js  time.js
node/src/runtime/: cursor-login.js  env.js  feishu.js  (+10 more)
node/test/: cli.test.js  collectors.test.js  cursor-login.test.js  env.test.js  feishu-targets.test.js  offline-bundle.test.js  package.test.js  parity.test.js  remotes.test.js  reporting.test.js  web-app.test.js  web.test.js
scripts/: build_pypi_release.sh
spec/: hash-contract.md
spec/parity-vectors/: aggregation_vectors.json  hash_vectors.json
src/llm_usage/: aggregation.py  bundle.py  cost_report.py  cursor_login.py  env.py  feishu_schema.py  feishu_targets.py  identity.py  interaction.py  interaction_flow.py  main.py  models.py  offline_bundle.py  paths.py  privacy.py  remotes.py  reporting.py  runtime_preflight.py  runtime_state.py  web.py
templates/: com.team.llm-usage-sync.plist  cron.sample
tests/: test_bundle.py  test_cli_help.py  test_collectors.py  test_config_feishu_targets.py  test_cursor_dashboard.py  test_cursor_login.py  test_cursor_login_module.py  test_env.py  test_feishu_auth.py  test_feishu_bitable.py  test_feishu_commands.py  test_feishu_targets.py  test_identity_aggregation.py  test_import_config.py  test_interaction.py  test_interaction_flow.py  test_main_identity.py  test_offline_bundle.py  test_offline_bundle_cli.py  test_opencode_collector.py  test_packaging.py  test_parity_vectors.py  test_parsing.py  test_paths.py  test_privacy.py  test_remote_file_collector.py  test_remotes.py  test_reporting.py  test_runtime_preflight.py  test_setup_feishu.py  test_web.py
web/: app-state.js  app.css  app.js  index.html
(+22 files in other folders)
