[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-usage-sync"
version = "0.1.0"
description = "Local LLM coding usage collector and Feishu Bitable sync"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "prompt_toolkit>=3.0.39",
  "browser-cookie3>=0.19.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
llm-usage = "llm_usage.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
llm_usage = ["resources/*.env"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
