[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-usage-horizon"
version = "0.2.0rc5"
description = "Local LLM coding usage collector and Feishu Bitable sync"
readme = "README.md"
license = { text = "MIT" }
authors = [
  {name = "Lewis"},
]
requires-python = ">=3.9"
keywords = ["llm", "usage", "cli", "feishu"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.31.0",
  "prompt_toolkit>=3.0.39",
  "browser-cookie3>=0.19.1",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/zaxliu/agent_coding_usage"
Repository = "https://github.com/zaxliu/agent_coding_usage"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
llm-usage = "llm_usage.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.package-data]
llm_usage = ["resources/*.env", "web_static/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
